# gdg_json

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
gdg_json/: __init__.py
